Dummy_Package_for_scratch_org/main/default/objects/User_Story_Selenium_Test__c/User_Story_Selenium_Test__c.object-meta.xml
<CustomObject>
    <label>User Story Selenium Test</label>
    <nameField>
        <label>User Story Selenium Test Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Story Selenium Tests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>