Dummy_Package_for_scratch_org/main/default/objects/User_Story_Selenium_Test__c/fields/Selenium_Test_Group__c.field-meta.xml
<CustomField>
    <fullName>Selenium_Test_Group__c</fullName>
    <label>Selenium Test Group</label>
    <referenceTo>Selenium_Test_Group__c</referenceTo>
    <relationshipLabel>User Story Selenium Tests</relationshipLabel>
    <relationshipName>User_Story_Selenium_Tests</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>